// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas sobre GifGrid Debe de mostrar items cuando se cargan imagenes 1`] = `
<Fragment>
  <h3>
    Pruebitas
  </h3>
  <div
    className="card-grid"
  >
    <ol>
      <GifGridItem
        id="ABC"
        key="ABC"
        title="Cualquier cosa"
        url="https://localhost/cualquier/cosa.jpg"
      />
    </ol>
  </div>
</Fragment>
`;

exports[`Pruebas sobre GifGrid GifGrid snapshoot 1`] = `
<Fragment>
  <h3>
    Pruebitas
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  >
    <ol />
  </div>
</Fragment>
`;
